--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Tests
 
 on:
   push:
@@ -19,5 +19,3 @@ jobs:
         run: cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
-      - name: Check code
-        run: cargo check --verbose
