--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,13 @@
 name = "complogic"
 version = "0.1.0"
 edition = "2021"
+
+[dependencies]
+eframe = "0.21.0"
+egui_node_graph = { git = "https://github.com/setzer22/egui_node_graph", rev = "3068b8cd9bad3a419682af273c01cd700bda2739" }
+anyhow = "1.0"
+serde = { version = "1.0", optional = true }
+
+[features]
+default = []
+persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]
