--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ serde = { version = "1.0", optional = true }
 [features]
 default = []
 persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen-futures = "0.4"
