use complogic as name

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "egui Template PWA",
-  "short_name": "egui-template-pwa",
+  "name": "Complogic",
+  "short_name": "complogic",
   "icons": [],
   "lang": "en-US",
   "id": "/index.html",
