--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 eframe = "0.21.0"
 egui_node_graph = { git = "https://github.com/setzer22/egui_node_graph", rev = "3068b8cd9bad3a419682af273c01cd700bda2739" }
 anyhow = "1.0"
-serde = { version = "1.0", optional = true }
+serde = { version = "1.0", features = ["derive"]}
 
 [features]
 default = []
-persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]
+persistence = ["egui_node_graph/persistence", "eframe/persistence"]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
